# planet-cli

./: .flake8  .gitignore  .pre-commmit-config.yaml  README.md  config_template.json  install.sh  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
planet_cli/: __main__.py  cli.py
planet_cli/classes/: authorization_manager.py  config_manager.py  error_manager.py  evalscript_manager.py  geometry_handler.py  proccess_api_manager.py  process_api_manager.py  utils.py
planet_cli/commands/: config_commands.py  search_commands.py  utils.py
planet_cli/post_installation/: create_config.py
post_installation/: create_config.py
tests/: test_cli.py  test_command_config.py  test_command_search.py
tests/assets/: aoi.geojson  aoi_test.geojson  aoi_test.kml
